--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,6 +2,144 @@
 @import "../abstracts/variables";
 
 
+/*-------------------------------------------------------------------------------------------------------------------------------*/
+/* MAIN SLIDER */
+/*-------------------------------------------------------------------------------------------------------------------------------*/
+.s-main {
+  & .swiper-entry {
+    margin-right: calc((-100vw + 100%) / 2);
+  }
+}
+
+.main-slide {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+
+  &__info {
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    top: 50%;
+    z-index: 20;
+    max-width: 864px;
+    color: #fff;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+}
+
+.main-slide .bg {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.main-slide .bg::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+}
+
+.main-slide .video {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  clip: rect(auto, auto, auto, auto);
+  display: block;
+}
+
+.main-slide .video video {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+
+.main-slide-info > *:last-child {
+  margin-bottom: 0;
+}
+
+.main-slide-info h2 {
+  color: inherit;
+}
+
+.main-slide-info p {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin-bottom: 2em;
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.main-slider .swiper-pagination {
+  text-align: center;
+  bottom: 20px;
+  width: 100%;
+}
+
+.main-slider .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  margin: 0 4px !important;
+  border-radius: 100%;
+  border: none;
+  vertical-align: top;
+  background-color: #fff;
+  opacity: .4;
+}
+
+.main-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+/*media*/
+@media(max-width: 1024px) {
+  .main-slide-info {
+    top: 70%;
+  }
+
+  .main-slide-info {
+    left: 15px;
+    right: 15px;
+  }
+
+  .main-slide-info p {
+    font-size: 18px;
+    margin-bottom: 1em;
+  }
+}
+
+@media(max-width: 575px) {
+  .main-slide-info p {
+    font-size: 16px;
+  }
+}
+
+
 .gallery {
   &__wrap {
     display: grid;
