--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,7 +7,9 @@
 }
 
 .main {
-  min-height: 100vh;
+  @media (min-width: $breakpoint-xl) {
+    min-height: 100vh;
+  }
 }
 
 .html {
@@ -102,7 +104,7 @@ body {
 
 
 .body-padding {
-  height:104px;
+  height: 104px;
   @media (max-width: $breakpoint-md) {
     height: 85px;
   }
@@ -143,9 +145,11 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
+
     &.swiper-initialized {
       opacity: 1;
     }
+
     &:not(.swiper-no-swiping) {
       cursor: url(../img/drag.png) 16 9, ew-resize;
     }
