--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -6,11 +6,6 @@
   background: rgba(255, 255, 255, .1);
   border-top: 1px solid #fff;
   position: relative;
-  z-index: 66655;
-  @media (max-width: $breakpoint-md) {
-    padding: 32px 0 0 0;
-  }
-
 
   .logo {
     &__wrap {
@@ -38,7 +33,7 @@
   &-item {
     &:not(&:last-child) {
       @media (max-width: $breakpoint-md) {
-        margin-bottom: 32px;
+        margin-bottom: 0;
       }
     }
 
@@ -114,11 +109,38 @@
       -webkit-justify-content: center;
       -ms-flex-pack: center;
       justify-content: center;
-      margin-top:24px
+      margin-top: 24px
     }
 
     &__link {
       margin-left: 16.45px;
+    }
+  }
+
+  .copyright {
+    & span, & a {
+      @include fontSize(16, 18);
+      color:#565656;
+    }
+
+    & span {
+      @media (min-width: $breakpoint-md) {
+        padding-right: 48px;
+        position: relative;
+        &:after {
+          content: '';
+          width: 1px;
+          height: 100%;
+          background-color: rgba(0,0,0,.2);
+          position: absolute;
+          right: 24px;
+          top: 0;
+        }
+      }
+      @media (max-width: $breakpoint-md) {
+        display: block;
+        margin-bottom: 12px;
+      }
     }
   }
 }
