--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -187,7 +187,7 @@
 
 .mb-180 {
   margin-bottom: 180px;
-  @media (max-width: $breakpoint-sm) {
+  @media (max-width: $breakpoint-lg) {
     margin-bottom: 100px;
   }
 }
