--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -27,6 +27,12 @@
 
   }
 
+  &.transparent {
+    @media (min-width: $breakpoint-lg) {
+      background: transparent;
+    }
+  }
+
   &__inner {
     position: relative;
     padding: 32px 0;
