--- a/src/sass/pages/_contacts.scss
+++ b/src/sass/pages/_contacts.scss
@@ -1,3 +1,60 @@
 @import "../abstracts/mixins";
 @import "../abstracts/variables";
 
+.s-contacts {
+  .contact {
+    @media (max-width: $breakpoint-md) {
+      margin-bottom: 20px;
+    }
+    &__title {
+      margin-bottom: 12px;
+      @media (max-width: $breakpoint-md) {
+        margin-bottom: 8px;
+      }
+    }
+
+    &__info {
+    }
+
+    &__title, &__info {
+      @include fontSize(14, 16);
+    }
+  }
+
+  &__cta {
+    background-color: #D8D6D1;
+    padding: 20px;
+    @media (max-width: $breakpoint-md) {
+      padding: 12px 12px 0 12px;
+    }
+  }
+
+  &__map {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: absolute !important;
+
+    &--wrap {
+      height: 370px;
+      margin-top: -50px;
+      z-index: 1;
+    }
+  }
+
+  .contact {
+    &.decor {
+      padding-left: 20px;
+
+      &:before {
+        content: '';
+        width: 2px;
+        height: 44px;
+        background-color: #000;
+        position: absolute;
+        left: 0;
+        top: 3px;
+      }
+    }
+  }
+}
