--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -62,10 +62,29 @@
     line-height: 1.22;
   }
 }
-
-.icon-right:before {
+.icon-ar-forward:before {
+  content: "\e906";
+}
+.icon-ar-bottom:before {
+  content: "\e905";
+}
+.icon-ar-left:before {
+  content: "\e900";
+}
+.icon-ar-right:before {
   content: "\e901";
 }
+.icon-pdf:before {
+  content: "\e902";
+}
+.icon-right:before {
+  content: "\e903";
+}
+.icon-share:before {
+  content: "\e904";
+}
+
+
 
 .heading {
   &.decor {
