--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -170,7 +170,7 @@
 .m-row {
   margin: 0 -10px;
   @media (max-width: $breakpoint-sm) {
-    margin: 0;
+   // margin: 0;
   }
 }
 
@@ -205,7 +205,7 @@
   position: relative;
 
   @media (max-width: $breakpoint-sm) {
-    padding: 0;
+   // padding: 0;
   }
 }
 
