--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -23,6 +23,8 @@
   z-index: 10;
   visibility: visible;
   opacity: 1;
+  box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.04);
+
   @media (max-width: 400px) {
 
   }
@@ -35,7 +37,7 @@
 
   &__inner {
     position: relative;
-    padding: 32px 0;
+
     @media (max-width: $breakpoint-lg) {
       padding: 15px 0;
     }
@@ -44,6 +46,9 @@
 
   & .logo {
     &__wrap {
+      @media (max-width: $breakpoint-xl) {
+        width: 160px;
+      }
       @media (max-width: $breakpoint-lg) {
         width: 143px;
       }
@@ -69,6 +74,11 @@
     &__current {
       position: relative;
       cursor: pointer;
+
+      & i {
+        font-size: 14px;
+        padding-left: 5px;
+      }
     }
 
     li {
@@ -79,13 +89,16 @@
 
     &__wrap {
       margin-left: 57.8px;
+      @media (max-width: $breakpoint-xl) {
+        margin-left: 25px;
+      }
       @media (max-width: $breakpoint-sm) {
         margin: 0 0 40px 0;
       }
 
       a {
         color: #000;
-        font-size: 15px;
+        @include fontSize(16, 18);
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -93,7 +106,7 @@
         @include transition(.5);
 
         &:hover {
-          color: $accentColor;
+
         }
       }
 
@@ -127,26 +140,32 @@
     align-items: center;
 
     &__phone {
-      font-size: 16px;
+      @include fontSize(16, 18);
+      @media (max-width: $breakpoint-lg) {
+        margin-bottom: 24px;
+      }
 
     }
 
     & .menu {
-      @media (min-width: $breakpoint-md) {
+      @media (min-width: $breakpoint-lg) {
         height: 100%;
       }
-      @media (max-width: $breakpoint-md) {
-        padding: 42px 16px 32px 16px;
+      @media (max-width: $breakpoint-lg) {
+        padding: 0 16px 20px 16px;
         text-align: center;
         margin: 0;
       }
 
       &-item {
         display: inline-block;
-        position: relative;
+
         height: 100%;
         margin-right: 57.8px;
-        @media (max-width: $breakpoint-md) {
+        @media (max-width: $breakpoint-xl) {
+          margin-right: 25px;
+        }
+        @media (max-width: $breakpoint-lg) {
           padding: 0;
           display: block;
           height: auto;
@@ -155,28 +174,48 @@
 
         & + .menu-item {
           @media (max-width: $breakpoint-lg) {
-            margin: 32px 0 0 0;
+            margin: 25px 0 0 0;
           }
         }
 
         & a {
           font-weight: 400;
-          font-size: 16px;
+          @include fontSize(16, 18);
           line-height: 1.2;
           color: #000;
           transition: color ease-out .3s;
+          padding: 42px 0;
           position: relative;
+          display: block;
+          @media (max-width: $breakpoint-lg) {
+            padding: 0 0 10px 0;
+          }
+
+          &:after {
+            content: '';
+            width: 0;
+            height: 1px;
+            background-color: #000;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            @include transition(.5);
+          }
         }
 
         &:hover, &.current-menu-item {
           & > a {
-            color: $accentColor;
-
             &:after {
-              background-color: $accentColor;
-              width: 100%;
-              transition: all ease-out .5s;
+              width: 40px;
+              @include transition(.5);
             }
+          }
+        }
+
+        &.current-menu-item {
+          & > a {
+            font-weight: 500;
           }
         }
       }
@@ -185,63 +224,25 @@
     @media (max-width: $breakpoint-lg) {
 
 
+      height: calc(100vh - 79px);
+      background-color: #fff;
       position: fixed;
-      top: 85px;
-      left: 10px;
-      right: 10px;
-      width: calc(100% - 20px);
-      border: 1px solid #fff;
-      border-radius: 5px;
-
+      top: 79px;
+      transition: all 1.2s ease;
+      z-index: 2;
+      width: 100%;
+      right: -100%;
+      padding: 0 16px 65px 16px;
+      overflow: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
 
-
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-      overflow: hidden;
-      z-index: -1;
-      pointer-events: none;
-      -webkit-transition: .5s;
-      transition: .5s;
-      -webkit-transform: translateY(-150%);
-      -ms-transform: translateY(-150%);
-      transform: translateY(-150%);
-      &:after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(255, 255, 255, 0.1);
-        z-index: -1;
-      }
       &.is-visible {
-        opacity: 1;
-        visibility: visible;
-        z-index: 50;
-        pointer-events: all;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-
-        & .menu-item {
-          a:before {
-            height: 0;
-          }
-        }
-
-        & .location, & .languages-navigation {
-          opacity: 1;
-          transition: all 2.5s ease;
-        }
+        right: 0;
+        transition: all .5s ease;
       }
     }
-
   }
 }
 
