--- a/src/sass/components/_breadcrumb.scss
+++ b/src/sass/components/_breadcrumb.scss
@@ -11,7 +11,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
-  color: #4E4E4E;
+  color: #B0B0B0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-box-align: center;
@@ -48,6 +48,9 @@
   }
 
   & .kb {
+    &_title {
+      color: #000;
+    }
     &_sep {
 
       & i {
