--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -27,5 +27,7 @@
 
 @import "pages/_home";
 @import "pages/_about";
+@import "pages/_blog";
+@import "pages/_portfolio";
 @import "pages/_contacts";
 @import "pages/_other";
