--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -49,7 +49,7 @@
       -ms-flex-align: center;
       align-items: center;
 
-      font-size: 18px;
+     @include fontSize(12,18);
       font-weight: 300;
       text-align: center;
       color: #242424;
@@ -59,7 +59,14 @@
       border-radius: 100%;
       cursor: pointer;
       @include transition(.4);
-
+      @media (max-width: $breakpoint-lg) {
+        width: 40px;
+        height: 40px;
+      }
+      @media (max-width: $breakpoint-sm) {
+        width: 30px;
+        height: 30px;
+      }
       & i {
         @include fontSize(12, 14);
       }
@@ -72,17 +79,32 @@
       }
 
       &.next, &.prev {
-        border-color: #465CA3;
-        font-size: 0;
-        color: #FFFFFF;
-        padding: 0;
-        line-height: 0;
-        position: relative;
+        & img {
+          width: 30px;
+          @include transition(.5);
+          transform: translateX(0);
+          @media (max-width: $breakpoint-sm) {
+            width: 20px;
 
-        & i {
-          color: $accentColor;
-          font-size: 12px;
-          @include transition(.4);
+          }
+        }
+
+
+      }
+
+      &.next {
+        &:hover {
+          & img {
+            transform: translateX(10px);
+          }
+        }
+      }
+
+      &.prev {
+        &:hover {
+          & img {
+            transform: translateX(-10px);
+          }
         }
       }
 
@@ -106,13 +128,9 @@
         background-color: #A59389;
       }
 
-      &:hover {
+      &:not(.next,.prev):hover {
         background-color: #A59389;
         color: $whiteColor;
-
-        & i {
-          color: $whiteColor;
-        }
       }
     }
   }
