--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -9,6 +9,7 @@
   z-index: 2;
 
   pointer-events: all;
+  display: none;
 }
 
 .body-grid, .body-grid span {
@@ -170,7 +171,7 @@
 .m-row {
   margin: 0 -10px;
   @media (max-width: $breakpoint-sm) {
-   // margin: 0;
+    // margin: 0;
   }
 }
 
@@ -191,21 +192,24 @@
     margin-bottom: 100px;
   }
 }
+
 .mb-32 {
   margin-bottom: 32px;
   @media (max-width: $breakpoint-sm) {
     margin-bottom: 24px;
   }
 }
-.mb-20{
+
+.mb-20 {
   margin-bottom: 20px;
 }
+
 .column {
   padding: 0 10px;
   position: relative;
 
   @media (max-width: $breakpoint-sm) {
-   // padding: 0;
+    // padding: 0;
   }
 }
 
