--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -336,310 +336,6 @@
   }
 }
 
-.s-portfolio {
-
-  &.home {
-    margin-bottom: 164px;
-  }
-
-
-  & .heading {
-    @media (max-width: $breakpoint-md) {
-      margin-bottom: 32px;
-    }
-  }
-
-  &__top {
-    margin-bottom: 45px;
-  }
-
-  &__column {
-    display: grid;
-    align-content: space-between;
-  }
-
-  &__item {
-    padding: 140px 0;
-    @media (max-width: $breakpoint-md) {
-      padding: 60px 0;
-    }
-
-    &:nth-child(1) {
-      padding-top: 0;
-    }
-
-    &:nth-child(even) {
-      flex-direction: row-reverse;
-      background-color: #F6F4F3;
-      position: relative;
-      @media (max-width: $breakpoint-md) {
-        flex-direction: column-reverse;
-      }
-
-      &:after {
-        content: '';
-        position: absolute;
-        width: 100vw;
-        height: 100%;
-        background-color: #F6F4F3;
-        left: calc(50% - 50vw);
-        top: 0;
-        z-index: -1;
-      }
-
-
-      .gallery__wrap {
-        @media (max-width: $breakpoint-md) {
-          margin-bottom: 24px;
-        }
-      }
-    }
-
-    &:nth-child(odd) {
-      .gallery__wrap {
-        @media (max-width: $breakpoint-md) {
-          margin-top: 24px;
-        }
-      }
-    }
-
-    & .heading {
-      margin-bottom: 18px;
-    }
-  }
-
-  .benefit {
-    &__wrap {
-      padding-top: 24px;
-
-    }
-
-    &__item {
-      display: grid;
-      grid-template-columns: 44px 1fr;
-      gap: 12px;
-      padding: 0 0 0 20px;
-
-      & + .benefit__item {
-        margin-top: 24px;
-      }
-
-      &:after {
-        content: '';
-        width: 2px;
-        height: 35px;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #A59389;
-      }
-    }
-  }
-
-
-  & .filter {
-    &__wrap {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 12px;
-
-
-      -webkit-box-pack: end;
-      -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-      justify-content: flex-end;
-      @media (max-width: $breakpoint-md) {
-        -webkit-box-pack: start;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        grid-template-columns: 1fr 1fr;
-        width: 100%;
-        max-width: 500px;
-      }
-    }
-
-    &__link {
-
-      padding: 16px 0;
-      border: 1px solid #565656;
-      color: #565656;
-      border-radius: 100px;
-      display: block;
-      cursor: pointer;
-      @include transition(.4);
-      @media (min-width: $breakpoint-md) {
-        min-width: 165px;
-      }
-
-      & + .filter__link {
-
-      }
-
-      &:hover {
-        background-color: #A59389;
-        color: #fff;
-      }
-
-      &.current {
-        background-color: #A59389;
-        border-color: #A59389;
-        color: #fff;
-        font-weight: bold;
-      }
-    }
-  }
-
-  &__inner {
-    padding-left: 20px;
-    padding-bottom: 80px;
-  }
-
-  & .btn-more {
-    margin-top: 18px;
-  }
-
-  .gallery-container {
-    position: relative;
-    width: 730px;
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
-  }
-
-  .gallery-main {
-    width: 600px;
-    height: 300px;
-    box-shadow: 0 50px 75px 50px rgba(#1e1e1e, 0.18);
-    border: 1px solid #e9e9e9;
-
-    .swiper-button {
-      &-prev,
-      &-next {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        top: auto;
-        left: auto;
-        height: 75px;
-        width: 40px;
-        color: #e9e9e9;
-        background: #1e1e1e;
-
-        &::after {
-          font-size: 12px;
-        }
-      }
-
-      &-prev {
-        right: 40px;
-        border-right: 1px solid #e9e9e9;
-      }
-    }
-  }
-
-  .gallery-title {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    font-family: "Epilogue", sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-    text-align: right;
-    text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(#000, 0.3);
-    color: #ffffff;
-
-    .swiper-slide-active & {
-      animation: slide-in 0.3s ease-in both;
-    }
-  }
-
-  .gallery-thumbs {
-    order: -1;
-    width: 100px;
-    height: 300px;
-    margin-right: 15px;
-    padding-left: 15px;
-
-    .swiper-slide {
-      img {
-        transition: 0.3s;
-      }
-
-      &-active {
-        opacity: 0.9;
-      }
-
-      &-thumb-active {
-        opacity: 1;
-
-        img {
-          margin-left: -15px;
-        }
-      }
-    }
-  }
-
-
-  @keyframes slide-in {
-    from {
-      opacity: 0;
-      right: -50%;
-    }
-  }
-
-
-  & .swiper-button {
-    &-prev {
-      padding-right: 32px;
-    }
-
-    &-next {
-      padding-left: 32px;
-    }
-
-    &__wrap {
-      position: absolute;
-      bottom: 0;
-      left: 10px;
-      padding: 36px;
-
-      z-index: 2;
-
-      &:after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(13px);
-        -webkit-backdrop-filter: blur(13px);
-        background-color: rgba(255, 255, 255, 0.2);
-        z-index: -1;
-      }
-
-      &:before {
-        content: '';
-        height: 13px;
-        width: 1px;
-        background-color: rgba(255, 255, 255, .2);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-  }
-
-  & .fraction__wrap {
-    position: absolute;
-    bottom: 0;
-    left: 35px;
-  }
-}
 
 .s-steps {
   margin-bottom: 186px;
@@ -686,96 +382,6 @@
     }
   }
 }
-
-.s-news {
-
-
-  & .news {
-    &__item {
-      margin-bottom: 40px;
-      @media (max-width: $breakpoint-md) {
-        margin-bottom: 32px;
-      }
-
-    }
-
-    &__info {
-      padding: 24px 0 0 20px;
-      @media (max-width: $breakpoint-md) {
-        padding: 10px 0 0 12px;
-      }
-    }
-
-    &__img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-
-      &-wrap {
-        padding-bottom: 100%;
-
-        &.--half {
-          padding-bottom: 62%;
-        }
-      }
-    }
-
-    &__date {
-      margin-bottom: 24px;
-      color: #8D8D8D;
-      @media (max-width: $breakpoint-md) {
-        margin-bottom: 12px;
-      }
-
-      &:before {
-        content: '';
-        width: 2px;
-        height: 100%;
-        position: absolute;
-        left: -20px;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #000;
-        @media (max-width: $breakpoint-md) {
-          left: -12px;
-        }
-      }
-    }
-
-    &__title {
-      margin-bottom: 18px;
-      @media (max-width: $breakpoint-md) {
-        margin-bottom: 10px;
-      }
-    }
-
-    &__text {
-      &:not(&.--large) {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        margin-bottom: 18px;
-      }
-
-
-    }
-
-    &__more {
-      color: #A59389;
-
-      & i {
-        padding-left: 12px;
-        font-size: 10px;
-      }
-    }
-  }
-}
-
 
 .project-detail-slider {
 
@@ -824,7 +430,7 @@
   right: 15px
 }
 
-.bg {
+.main-banner .bg {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-attachment: scroll;
