--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -1,105 +1,36 @@
 @import "../abstracts/mixins";
 @import "../abstracts/variables";
 
-
-.swiper-container.swiper-thumbs-bottom.swiper-thumbs {
-  width: 100%;
-  max-height: 570px;
-}
-
-.fraction {
-  &__wrap {
-
-  }
-
-  &__current {
-    font-size: 80px;
-    line-height: 1;
-    color: #A59389;
-  }
-
-  &__total {
-    color: #000000;
-    margin-bottom: 6px;
-
-    &:before {
-      content: '/';
-    }
-  }
-}
-
-.s-about {
-  margin-bottom: 180px;
-
-  &__inner {
-    padding-left: 20px;
-  }
-
-  & .heading {
-
-  }
-
-  & .btn-more {
-    margin-top: 32px;
-  }
-
-  &__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-
-    &-wrap {
-      padding-bottom: 62%;
-    }
-  }
-
-  & .benefit {
-    &__wrap {
-      margin-bottom: 32px;
-    }
-
-    &__icon {
-      width: 44px;
-      height: 44px;
-      object-fit: contain;
-      object-position: center;
-    }
-
-    &__item {
-      display: grid;
-      grid-template-columns: 44px 1fr;
-      gap: 10.5px;
-      padding: 0 10px 0 20px;
-
-      &:after {
-        content: '';
-        width: 2px;
-        height: 35px;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #A59389;
-      }
-    }
-  }
-}
-
 .s-portfolio {
 
   &.home {
-    margin-bottom: 164px;
+
+    & .heading {
+      margin-bottom: 32px;
+    }
+  }
+
+
+  & .heading {
+    @media (max-width: $breakpoint-md) {
+      margin-bottom: 32px;
+    }
   }
 
   &__top {
     margin-bottom: 45px;
   }
 
+  &__column {
+    display: grid;
+    align-content: space-between;
+  }
+
   &__item {
     padding: 140px 0;
+    @media (max-width: $breakpoint-md) {
+      padding: 60px 0;
+    }
 
     &:nth-child(1) {
       padding-top: 0;
@@ -109,6 +40,9 @@
       flex-direction: row-reverse;
       background-color: #F6F4F3;
       position: relative;
+      @media (max-width: $breakpoint-md) {
+        flex-direction: column-reverse;
+      }
 
       &:after {
         content: '';
@@ -120,6 +54,21 @@
         top: 0;
         z-index: -1;
       }
+
+
+      .gallery__wrap {
+        @media (max-width: $breakpoint-md) {
+          margin-bottom: 24px;
+        }
+      }
+    }
+
+    &:nth-child(odd) {
+      .gallery__wrap {
+        @media (max-width: $breakpoint-md) {
+          margin-top: 24px;
+        }
+      }
     }
 
     & .heading {
@@ -128,6 +77,11 @@
   }
 
   .benefit {
+    &__wrap {
+      padding-top: 24px;
+
+    }
+
     &__item {
       display: grid;
       grid-template-columns: 44px 1fr;
@@ -151,6 +105,59 @@
     }
   }
 
+
+  & .filter {
+    &__wrap {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 12px;
+
+
+      -webkit-box-pack: end;
+      -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
+      @media (max-width: $breakpoint-md) {
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+        max-width: 500px;
+      }
+    }
+
+    &__link {
+
+      padding: 16px 0;
+      border: 1px solid #565656;
+      color: #565656;
+      border-radius: 100px;
+      display: block;
+      cursor: pointer;
+      @include transition(.4);
+      @media (min-width: $breakpoint-md) {
+        min-width: 165px;
+      }
+
+      & + .filter__link {
+
+      }
+
+      &:hover {
+        background-color: #A59389;
+        color: #fff;
+      }
+
+      &.current {
+        background-color: #A59389;
+        border-color: #A59389;
+        color: #fff;
+        font-weight: bold;
+      }
+    }
+  }
 
   &__inner {
     padding-left: 20px;
@@ -299,376 +306,5 @@
     position: absolute;
     bottom: 0;
     left: 35px;
-  }
-}
-
-.s-steps {
-  margin-bottom: 186px;
-
-  &__column {
-    &:nth-child(even) {
-      margin-top: 75px;
-    }
-  }
-
-  & .heading {
-    margin-bottom: 34px;
-  }
-
-  .step {
-    &__item {
-      padding: 0 20px;
-    }
-
-    &__img {
-      &-wrap {
-        width: 44px;
-        height: 44px;
-        margin-bottom: 32px;
-
-        &:after {
-          content: '';
-          width: 2px;
-          height: 100%;
-          position: absolute;
-          left: -20px;
-          top: 0;
-          background-color: #A59389;
-        }
-      }
-    }
-
-    &__heading {
-      margin-bottom: 16px;
-    }
-
-    &__description {
-
-    }
-  }
-}
-
-.s-news {
-  margin-bottom: 180px;
-
-  & .news {
-    &__item {
-      margin-bottom: 40px;
-    }
-
-    &__info {
-      padding: 24px 0 0 20px;
-    }
-
-    &__img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-
-      &-wrap {
-        padding-bottom: 100%;
-
-        &.--half {
-          padding-bottom: 62%;
-        }
-      }
-    }
-
-    &__date {
-      margin-bottom: 24px;
-      color: #8D8D8D;
-
-      &:before {
-        content: '';
-        width: 2px;
-        height: 100%;
-        position: absolute;
-        left: -20px;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #000;
-      }
-    }
-
-    &__title {
-      margin-bottom: 18px;
-    }
-
-    &__text {
-      &:not(&.--large) {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        margin-bottom: 18px;
-      }
-
-
-    }
-
-    &__more {
-      color: #A59389;
-
-      & i {
-        padding-left: 12px;
-        font-size: 10px;
-      }
-    }
-  }
-}
-
-
-.project-detail-slider {
-
-
-  & .swiper-thumbs-top .image {
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%;
-    display: inline-block;
-    vertical-align: top;
-  }
-}
-
-
-.project-detail-slider .swiper-thumbs .swiper-preview .swiper-slide .project-preview {
-  -webkit-filter: grayscale(0);
-  filter: grayscale(0)
-}
-
-
-.swiper-preview .swiper-entry .swiper-button-prev {
-  left: 0;
-  margin: 0;
-  top: auto;
-  bottom: 5px
-}
-
-.swiper-preview .swiper-entry .swiper-button-next {
-  right: 0;
-  margin: 0;
-  top: auto;
-  bottom: 5px
-}
-
-.project-detail-slider .swiper-preview .swiper-entry .swiper-button-prev {
-  bottom: auto;
-  top: 50%;
-  margin-top: -20px;
-  left: 15px
-}
-
-.project-detail-slider .swiper-preview .swiper-entry .swiper-button-next {
-  bottom: auto;
-  top: 50%;
-  margin-top: -20px;
-  right: 15px
-}
-
-.bg {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #b5b5b5
-}
-
-.swiper-thumbs .swiper-preview .featured-project {
-  margin-bottom: 25px
-}
-
-.swiper-thumbs .swiper-preview .featured-project .title {
-  font-size: 18px
-}
-
-
-.swiper-thumbs .swiper-preview .swiper-slide .project-preview .bg {
-  background-color: transparent
-}
-
-.swiper-thumbs .swiper-preview .swiper-slide .project-preview {
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 100%;
-  display: block;
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-  -webkit-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out;
-  cursor: pointer;
-  opacity: .2;
-}
-
-
-.swiper-thumbs .swiper-preview .swiper-slide-thumb-active .project-preview {
-  opacity: 1;
-}
-
-
-.s-history {
-  margin-bottom: 180px;
-
-  & .swiper-button {
-    &-prev {
-      padding-right: 32px;
-    }
-
-    &-next {
-      padding-left: 32px;
-    }
-
-    &__wrap {
-      position: absolute;
-      bottom: 0;
-      right: 10px;
-      padding: 36px;
-
-      z-index: 2;
-
-      &:after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(13px);
-        -webkit-backdrop-filter: blur(13px);
-        background-color: rgba(255, 255, 255, 0.2);
-        z-index: -1;
-      }
-
-      &:before {
-        content: '';
-        height: 13px;
-        width: 1px;
-        background-color: rgba(255, 255, 255, .2);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-  }
-
-}
-
-
-.s-team {
-  margin-bottom: 180px;
-
-  &__top {
-    margin-bottom: 44px;
-  }
-
-  .swiper-slide {
-    &:nth-child(even) {
-      .team__item {
-        margin-top: 80px;
-      }
-    }
-  }
-
-  .team {
-    &__item {
-
-    }
-
-    &__img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-
-      &-wrap {
-        margin-bottom: 32px;
-        padding-bottom: 70%;
-        position: relative;
-      }
-    }
-
-    &__name {
-      margin-bottom: 12px;
-    }
-
-    &__position {
-
-    }
-
-    &__info {
-      &.decor {
-        padding-left: 20px;
-
-        &:after {
-          content: '';
-          height: calc(100% - 4px);
-          width: 2px;
-          background-color: #000;
-          position: absolute;
-          left: 0;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-    }
-  }
-}
-
-.s-partners {
-  margin-bottom: 180px;
-}
-
-.s-contacts {
-  .contact {
-    &__title {
-      margin-bottom: 12px;
-    }
-
-    &__info {
-    }
-  }
-
-  &__cta {
-    background-color: #D8D6D1;
-    padding: 20px;
-  }
-
-  &__map {
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    position: absolute !important;
-
-    &--wrap {
-      height: 370px;
-      margin-top: -50px;
-      z-index: 1;
-    }
-  }
-
-  .contact {
-    &.decor {
-      padding-left: 20px;
-
-      &:before {
-        content: '';
-        width: 2px;
-        height: 44px;
-        background-color: #000;
-        position: absolute;
-        left: 0;
-        top: 3px;
-      }
-    }
   }
 }
