--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -196,6 +196,58 @@ body {
   &-button {
     &__wrap {
       cursor: auto;
+
+      &.top {
+        @media (min-width: $breakpoint-md) {
+          position: absolute;
+          top: 3%;
+          right: 15px;
+        }
+        @media (max-width: $breakpoint-md) {
+          position: relative;
+          width: 100%;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+          justify-content: space-between;
+          margin-top: 40px;
+        }
+
+
+        & .swiper-button {
+          &-next, &-prev {
+            color: #000000;
+
+            & i {
+              color: #000000;
+            }
+          }
+
+          &-next {
+            padding-left: 24px;
+
+
+          }
+
+          &-prev {
+            padding-right: 24px;
+
+            &:before {
+              content: '';
+              height: 13px;
+              width: 1px;
+              background-color: rgba(0, 0, 0, .2);
+              position: absolute;
+              top: 50%;
+              right: 0;
+              transform: translateY(-50%);
+              @media (max-width: $breakpoint-md) {
+                display: none;
+              }
+            }
+          }
+        }
+      }
     }
   }
 
@@ -212,6 +264,7 @@ body {
       color: #fff;
       @include transition(.5);
     }
+
     &:after {
       display: none;
     }
@@ -232,6 +285,17 @@ body {
   &-button-prev {
     & i {
       padding-right: 8px;
+    }
+
+    &:before {
+      content: '';
+      height: 13px;
+      width: 1px;
+      background-color: rgba(255, 255, 255, .2);
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
     }
 
     &:hover {
