--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,7 +24,7 @@
   visibility: visible;
   opacity: 1;
   box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.04);
-
+  @include transition(.5);
   @media (max-width: 400px) {
 
   }
@@ -32,6 +32,25 @@
   &.transparent {
     @media (min-width: $breakpoint-lg) {
       background: transparent;
+      box-shadow: 0px 4px 24px 0px transparent;
+
+      & .navbar .menu-item {
+        & a {
+          color: #fff;
+        }
+      }
+      & .navbar__phone {
+        color: #fff;
+      }
+      & .lang__current {
+        & a {
+          color: #fff;
+        }
+
+        & i {
+          color: #fff;
+        }
+      }
     }
   }
 
@@ -78,11 +97,13 @@
 
       & a, & i {
         font-weight: 600;
+        transition: all .5s ease;
       }
 
       & i {
         font-size: 14px;
         padding-left: 8px;
+
       }
     }
 
@@ -163,6 +184,7 @@
     &__phone {
       @include fontSize(16, 18);
       display: block;
+      @include transition(.5);
       @media (max-width: $breakpoint-lg) {
         padding: 32px 15px;
         border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -203,7 +225,7 @@
           @include fontSize(16, 18);
           line-height: 1.2;
           color: #000;
-          transition: color ease-out .3s;
+          @include transition(.5);
           padding: 42px 0;
           position: relative;
           display: block;
