--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -168,6 +168,36 @@
     margin-top: 18px;
   }
 
+  .project {
+    &__heading {
+      margin-bottom: 18px;
+    }
+
+    &__info {
+      display: grid;
+      align-content: space-between;
+
+      @media (min-width: $breakpoint-md) {
+        height: 100%;
+        padding-left: 20px;
+      }
+      @media (max-width: $breakpoint-md) {
+        padding-left: 12px;
+        margin-bottom: 32px;
+      }
+
+      & .btn {
+
+        max-width: 185px;
+        display: inline-block;
+        @media (max-width: $breakpoint-md) {
+          margin-top: 24px;
+        }
+      }
+    }
+  }
+
+
   .gallery-container {
     position: relative;
     width: 730px;
