--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -86,6 +86,9 @@
 
     &__item {
       padding: 0 20px;
+      @media (max-width: $breakpoint-md) {
+        padding: 0 12px;
+      }
 
       &:nth-child(even) {
         @media (min-width: $breakpoint-md) {
@@ -114,6 +117,9 @@
           left: -20px;
           top: -1px;
           background-color: #A59389;
+          @media (max-width: $breakpoint-md) {
+            left: -12px;
+          }
         }
       }
     }
@@ -173,38 +179,59 @@
     }
   }
 
-  & .swiper-button {
-    &-prev {
-      padding-right: 32px;
-
-    }
-
-    &-next {
-      padding-left: 32px;
-    }
-
-    &__wrap {
+  & .swiper {
+    &-pagination {
       position: absolute;
+      left: 100%;
       bottom: 0;
-      right: 0;
-      padding: 36px;
-
-      z-index: 2;
-      @media (max-width: $breakpoint-md) {
-        padding: 24px;
+      min-width: 180px;
+      &-current {
+        font-size: 80px;
+        line-height: 1;
+        color: #A59389;
+        margin-right: 28px;
+        font-weight: 700;
       }
 
-      &:after {
-        content: "";
+      &-total {
+        line-height: 1.221;
+        @include fontSize(18, 24);
+      }
+    }
+
+    &-button {
+      &-prev {
+        padding-right: 32px;
+
+      }
+
+      &-next {
+        padding-left: 32px;
+      }
+
+      &__wrap {
         position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(13px);
-        -webkit-backdrop-filter: blur(13px);
-        background-color: rgba(255, 255, 255, 0.2);
-        z-index: -1;
+        bottom: 0;
+        right: 0;
+        padding: 36px;
+
+        z-index: 2;
+        @media (max-width: $breakpoint-md) {
+          padding: 24px;
+        }
+
+        &:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          backdrop-filter: blur(13px);
+          -webkit-backdrop-filter: blur(13px);
+          background-color: rgba(255, 255, 255, 0.2);
+          z-index: -1;
+        }
       }
     }
   }
@@ -295,6 +322,9 @@
     &__info {
       &.decor {
         padding-left: 20px;
+        @media (max-width: $breakpoint-sm) {
+          padding-left: 12px;
+        }
 
         &:after {
           content: '';
@@ -302,7 +332,7 @@
           width: 2px;
           background-color: #000;
           position: absolute;
-          left: 0;
+          left: 0.5px;
           top: 50%;
           transform: translateY(-50%);
         }
