--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -87,7 +87,9 @@
       grid-template-columns: 44px 1fr;
       gap: 12px;
       padding: 0 0 0 20px;
-
+      @media (max-width: $breakpoint-md) {
+        padding-left: 12px;
+      }
       & + .benefit__item {
         margin-top: 24px;
       }
