--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -71,27 +71,59 @@
       top: 0;
       right: 0;
       z-index: 3;
-      width: calc(50% + 46px);
+      width: auto;
       background: radial-gradient(black, transparent);
       height: 100%;
       object-fit: cover;
+      @media (max-width: $breakpoint-md) {
+        width: 460px;
+        height: auto;
+      }
     }
 
   }
 
   & .social {
     &__item {
-      & a {
-        display: block;
-        width: 32px;
-        height: 32px;
+      &:not(&:last-child) {
         @media (max-width: $breakpoint-md) {
-          width: 24px;
-          height: 24px;
+          margin-right: 12px;
         }
+        @media (min-width: $breakpoint-md) {
+          margin-bottom: 24px;
+        }
+      }
+    }
 
-        & img {
-          object-fit: contain;
+    & a {
+      display: block;
+      width: 32px;
+      height: 32px;
+      @media (max-width: $breakpoint-md) {
+        width: 24px;
+        height: 24px;
+      }
+
+      & img {
+        object-fit: contain;
+      }
+    }
+
+    &__title {
+      & span {
+        @include fontSize(14, 16);
+        color: #020202;
+      }
+
+      @media (max-width: $breakpoint-md) {
+        position: relative;
+        &:after {
+          content: '';
+          width: 100%;
+          height: 1px;
+          background-color: red;
+          position: absolute;
+          right: 13px;
         }
       }
     }
@@ -104,11 +136,7 @@
       display: flex;
       -webkit-flex-flow: row wrap;
       flex-flow: row wrap;
-      &__item {
-        &:not(&:last-child) {
-          margin-right: 12px;
-        }
-      }
+
       &__wrap {
         -webkit-box-pack: justify;
         -webkit-justify-content: space-between;
@@ -125,9 +153,6 @@
         -webkit-flex-flow: row wrap;
         flex-flow: row wrap;
         padding: 24px 15px 0 15px;
-      }
-      &__title {
-
       }
     }
     @media (min-width: $breakpoint-md) {
@@ -147,8 +172,7 @@
           transform-origin: 100% 100%;
           -webkit-transform-origin: 100% 100%;
           margin-top: -19px;
-          @include fontSize(14, 16);
-          color: #020202;
+
         }
       }
 
@@ -174,21 +198,6 @@
         }
 
       }
-
-      &__item {
-        & + .social__item {
-          margin-top: 24px;
-        }
-
-        & a {
-          display: block;
-
-          & img {
-
-          }
-        }
-      }
-
     }
   }
 
@@ -270,27 +279,12 @@
   overflow: hidden;
   width: 100%;
   height: 100vh;
-
-  &__logo {
-    width: 365px;
-    margin-bottom: 60px;
-    margin-left: auto;
-    @media (max-width: $breakpoint-md) {
-      width: 227px;
-      margin-bottom: 56px;
-    }
+  @media (max-width: $breakpoint-md) {
+    margin-top: 80px;
+    height: calc(100vh - 80px);
   }
-
-  &__heading {
-    margin-bottom: 32px;
-  }
-
-  &__heading, &__description {
-    width: 80%;
-    margin-left: auto;
-    @media (max-width: $breakpoint-lg) {
-      width: 100%;
-    }
+  @media (max-width: $breakpoint-sm), (max-height: 750px) {
+    height: calc(100vh - 80px + 180px);
   }
 
   &__info {
@@ -308,9 +302,44 @@
     text-align: right;
     @media (max-width: 1120px) {
       padding: 0 15px;
+
+    }
+    @media (max-width: $breakpoint-md) {
+      transform: none;
+      top: 20%;
+      @media (max-width: $breakpoint-sm) and (max-height: 750px) {
+        top: 10%;
+      }
     }
 
   }
+
+  &__logo {
+    width: 365px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    @media (max-width: $breakpoint-md) {
+      width: 227px;
+      margin-bottom: 56px;
+    }
+  }
+
+  &__heading {
+    margin-bottom: 32px;
+    @media (max-width: $breakpoint-sm) and (max-height: 750px) {
+      font-size: 24px;
+    }
+  }
+
+  &__heading, &__description {
+    width: 80%;
+    margin-left: auto;
+    @media (max-width: $breakpoint-lg) {
+      width: 100%;
+    }
+  }
+
+
 }
 
 .main-slide .bg {
