--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -10,8 +10,9 @@ $breakpoint-xl: 1199px;
 
 
 
-$accentColor: #FFF61B;
-$primaryColor: #1364FF;
+$accent-color: #A59389;
 $whiteColor: #ffffff;
 
+$black-main: #000;
+$body-text: #565656;
 
