--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -42,7 +42,7 @@ input, button {
     }
 
     &__label {
-      color: $accentColor;
+      color: $accent-color;
       margin-bottom: 20px;
       display: block;
     }
