--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -134,8 +134,8 @@
     &__link {
 
       padding: 16px 0;
-      border: 1px solid #565656;
-      color: #565656;
+      border: 1px solid $body-text;
+      color: $body-text;
       border-radius: 100px;
       display: block;
       cursor: pointer;
