--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -60,35 +60,42 @@
   &-s {
     @include fontSize(14, 16);
     line-height: 1.4;
+    color: $body-text;
   }
 }
+
 .icon-ar-forward:before {
   content: "\e906";
 }
+
 .icon-ar-bottom:before {
   content: "\e905";
 }
+
 .icon-ar-left:before {
   content: "\e900";
 }
+
 .icon-ar-right:before {
   content: "\e901";
 }
+
 .icon-pdf:before {
   content: "\e902";
 }
+
 .icon-right:before {
   content: "\e903";
 }
+
 .icon-share:before {
   content: "\e904";
 }
 
 
-
 .heading {
   &.decor {
-    &:not(.no-margin){
+    &:not(.no-margin) {
       margin-left: 20px;
       @media (max-width: $breakpoint-md) {
         margin-left: 12px;
@@ -105,7 +112,7 @@
       top: 50%;
       transform: translateY(-50%);
 
-      background-color: #A59389;
+      background-color: $accent-color;
       @media (max-width: $breakpoint-md) {
         left: -12px;
       }
@@ -115,6 +122,6 @@
   &__sub {
 
     letter-spacing: 0.19em;
-    color: $accentColor;
+    color: $accent-color;
   }
 }
