--- a/src/sass/components/_editor-style.scss
+++ b/src/sass/components/_editor-style.scss
@@ -8,6 +8,7 @@
     font-family: 'CraftworkGrotesk', sans-serif;
     font-weight: normal;
     color: #565656;
+    color:$body-text;
 
     & p {
 
@@ -15,7 +16,7 @@
       @include fontSize(14, 18);
       line-height: 130%;
       margin-bottom: 32px;
-      color: #565656;
+      color:$body-text;
 
       & + ul, & + ol {
         margin-top: 15px;
@@ -50,7 +51,7 @@
     }
 
     & a:not(.btn-primary) {
-      color: $accentColor;
+      color:$accent-color;
       text-decoration: none;
       position: relative;
       font-weight: bold;
@@ -64,7 +65,7 @@
         margin: 0 auto;
         width: 100%;
         height: 1px;
-        background-color: $accentColor;
+        background-color: $accent-color;
         @include transition(.3);
       }
 
@@ -126,7 +127,7 @@
         @include fontSize(14, 18);
         line-height: 1.3;
 
-        color: #565656;
+        color: $body-text;
         position: relative;
         //  padding-left: 15px;
         margin-bottom: 10px;
