--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -39,7 +39,7 @@
 
     &__heading {
       margin-bottom: 20px;
-      color: $accentColor;
+      color: $accent-color;
       font-size: 18px;
     }
   }
@@ -66,6 +66,11 @@
     &-item {
       flex: 0 0 50%;
       margin-bottom: 24px;
+
+      & a {
+        @include fontSize(16, 18);
+        color: $black-main;
+      }
     }
   }
 
@@ -80,7 +85,7 @@
   .social {
     &__list {
       position: absolute;
-      right: 10px;
+      left:200px;
       top: -4px;
     }
 
